[gd_scene load_steps=4 format=3 uid="uid://dlyxgmactw6w3"]

[ext_resource type="PackedScene" uid="uid://dxasj7736kkog" path="res://human/human_sprites.tscn" id="1_2xp5l"]
[ext_resource type="Script" uid="uid://dlgc7x0si16ro" path="res://npc/npc.gd" id="1_nhy3c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nhy3c"]
radius = 6.0

[node name="npc" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_nhy3c")

[node name="human_sprites" parent="." instance=ExtResource("1_2xp5l")]
position = Vector2(0, -6)

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nhy3c")

[node name="route" type="Node2D" parent="."]

[node name="raycast" type="RayCast2D" parent="."]
enabled = false

[node name="player_detection" type="Node2D" parent="."]

[node name="area" type="Area2D" parent="player_detection"]
collision_layer = 0

[node name="collider" type="CollisionPolygon2D" parent="player_detection/area"]
polygon = PackedVector2Array(-16, -8, -8, -16, 8, -16, 16, -8, 64, 64, -64, 64)

[connection signal="body_entered" from="player_detection/area" to="." method="_on_near_area_body_entered"]
